added postgres role;

--- a/roles/market_stack/templates/3d-stack.yml.j2
+++ b/roles/market_stack/templates/3d-stack.yml.j2
@@ -10,12 +10,12 @@ services:
     deploy:
       replicas: {{ groups['market'] | length }}
     environment:
-      SPRING_R2DBC_URL: r2dbc:postgresql://{{ DB_FQDN }}:{{ DB_PORT }}/{{ BACK_DATABASE }}
-      SPRING_R2DBC_USERNAME: {{ DB_USER }}
-      SPRING_R2DBC_PASSWORD: {{ DB_PASSWORD }}
-      FLYWAY_URL: jdbc:postgresql://{{ DB_FQDN }}:{{ DB_PORT }}/{{ BACK_DATABASE }}
-      FLYWAY_USER: {{ DB_USER }}
-      FLYWAY_PASSWORD: {{ DB_PASSWORD }}
+      SPRING_R2DBC_URL: r2dbc:postgresql://{{ POSTGRES_FQDN }}:{{ POSTGRES_PORT }}/{{ BACK_DATABASE }}
+      SPRING_R2DBC_USERNAME: {{ POSTGRES_USER }}
+      SPRING_R2DBC_PASSWORD: {{ POSTGRES_PASSWORD }}
+      FLYWAY_URL: jdbc:postgresql://{{ POSTGRES_FQDN }}:{{ POSTGRES_PORT }}/{{ BACK_DATABASE }}
+      FLYWAY_USER: {{ POSTGRES_USER }}
+      FLYWAY_PASSWORD: {{ POSTGRES_PASSWORD }}
 
       S3_ACCESS-KEY: {{ S3_ACCESS_KEY }}
       S3_SECRET-KEY: {{ S3_SECRET_KEY }}
