--- a/roles/market_stack/templates/3d-stack.yml.j2
+++ b/roles/market_stack/templates/3d-stack.yml.j2
@@ -17,6 +17,11 @@ services:
       FLYWAY_USER: {{ POSTGRES_USER }}
       FLYWAY_PASSWORD: {{ POSTGRES_PASSWORD }}
 
+      SPRING_MAIL_HOST: {{ BACK_MAIL_HOST }}
+      SPRING_MAIL_PORT: {{ BACK_MAIL_PORT }}
+      SPRING_MAIL_USERNAME: {{ BACK_MAIL_USERNAME }}
+      SPRING_MAIL_PASSWORD: {{ BACK_MAIL_PASSWORD }}
+
       S3_ACCESS-KEY: {{ S3_ACCESS_KEY }}
       S3_SECRET-KEY: {{ S3_SECRET_KEY }}
       S3_ENDPOINT: http://{{ S3_FQDN }}:{{ S3_PORT }}
@@ -30,6 +35,7 @@ services:
       APP_MAX_PRODUCT_IMAGES: {{ BACK_MAX_PRODUCT_IMAGES }}
       APP_PRIVATE_KEY_PATH: {{ BACK_PRIVATE_KEY_PATH }}
       APP_PUBLIC_KEY_PATH: {{ BACK_PUBLIC_KEY_PATH }}
+      APP_EMAIL_FROM: {{ BACK_MAIL_USERNAME }}
     volumes:
       - type: bind
         source: {{ INSTALL_DIR }}/{{ KEYS_DIR }}
@@ -53,14 +59,13 @@ services:
     deploy:
       replicas: {{ groups['market'] | length }}
     environment:
+      MARKET_CLIENT_TOKEN: {{ LISTENER_MARKET_TOKEN }}
       TELEGRAM_MARKET_API_ID: {{ LISTENER_TELEGRAM_API_ID }}
       TELEGRAM_MARKET_API_HASH: {{ LISTENER_TELEGRAM_API_HASH }}
       TELEGRAM_MARKET_CHANNEL_USERNAME: "{{ LISTENER_CHANNEL_USERNAME }}"
       TELEGRAM_MARKET_BOT_TOKEN: "{{ LISTENER_TELEGRAM_BOT_TOKEN }}"
       TELEGRAM_MARKET_PATH: {{ LISTENER_IMAGES_PATH }}
       MARKET_CLIENT_BASE_URL: {{ LISTENER_MARKET_BASE_URL }}
-      MARKET_CLIENT_LOGIN: {{ LISTENER_MARKET_LOGIN }}
-      MARKET_CLIENT_PASSWORD: {{ LISTENER_MARKET_PASSWORD }}
       FILE_HANDLER_PATH: {{ LISTENER_IMAGES_PATH }}
     volumes:
       - type: bind
