--- a/roles/market_stack/templates/3d-stack.yml.j2
+++ b/roles/market_stack/templates/3d-stack.yml.j2
@@ -21,6 +21,9 @@ services:
       SPRING_MAIL_PORT: {{ BACK_MAIL_PORT }}
       SPRING_MAIL_USERNAME: {{ BACK_MAIL_USERNAME }}
       SPRING_MAIL_PASSWORD: {{ BACK_MAIL_PASSWORD }}
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: "true"
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: "true"
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_SSL_TRUST: {{ BACK_MAIL_HOST }}
 
       S3_ACCESS-KEY: {{ S3_ACCESS_KEY }}
       S3_SECRET-KEY: {{ S3_SECRET_KEY }}
@@ -33,6 +36,7 @@ services:
 
       APP_MAX_PARTICIPANT_IMAGES: {{ BACK_MAX_PARTICIPANT_IMAGES }}
       APP_MAX_PRODUCT_IMAGES: {{ BACK_MAX_PRODUCT_IMAGES }}
+      APP_PRODUCT-EXPIRATION-DAYS: {{ BACK_PRODUCT_EXPIRATION_DAYS }}
       APP_PRIVATE_KEY_PATH: {{ BACK_PRIVATE_KEY_PATH }}
       APP_PUBLIC_KEY_PATH: {{ BACK_PUBLIC_KEY_PATH }}
       APP_EMAIL_FROM: {{ BACK_MAIL_USERNAME }}
