--- a/roles/db_stack/templates/3d-postgres-stack.yml.j2
+++ b/roles/db_stack/templates/3d-postgres-stack.yml.j2
@@ -22,9 +22,10 @@ services:
       POSTGRES_PASSWORD: {{ POSTGRES_PASSWORD }}
       POSTGRES_DB: {{ POSTGRES_DB }}
       TZ: Europe/Moscow
+{% if dev_mode | default(False) %}
     ports:
       - {{ POSTGRES_PORT }}:{{ POSTGRES_PORT }}
-      # todo add condition to open port
+{% endif %}
     networks:
       - {{  SWARM_NETWORK_NAME }}
 
